--- a/TibiaHeleper/TibiaHeleper.csproj
+++ b/TibiaHeleper/TibiaHeleper.csproj
@@ -62,6 +62,10 @@
     <Compile Include="MemoryOperations\ReadMemory.cs" />
     <Compile Include="Modules\AutoHaste.cs" />
     <Compile Include="Modules\ModuesManager.cs" />
+    <Compile Include="Modules\Module.cs" />
+    <Compile Include="Windows\AdditionalModules.xaml.cs">
+      <DependentUpon>AdditionalModules.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\HealerWindow.xaml.cs">
       <DependentUpon>HealerWindow.xaml</DependentUpon>
     </Compile>
@@ -77,6 +81,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\AdditionalModules.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\HealerWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
