--- a/TibiaHeleper/TibiaHeleper.csproj
+++ b/TibiaHeleper/TibiaHeleper.csproj
@@ -61,6 +61,7 @@
     </ApplicationDefinition>
     <Compile Include="BackgroundWorkers\BackgroundWorker.cs" />
     <Compile Include="BackgroundWorkers\CheckIsGameRunningWorker.cs" />
+    <Compile Include="BackgroundWorkers\WhoIsLoggedInWorker.cs" />
     <Compile Include="BackgroundWorkers\WorkersManager.cs" />
     <Compile Include="MemoryOperations\Adresses.cs" />
     <Compile Include="MemoryOperations\Constants.cs" />
@@ -75,8 +76,11 @@
     <Compile Include="Modules\TargetingModule\Target.cs" />
     <Compile Include="Modules\TargetingModule\Targeter.cs" />
     <Compile Include="Modules\WalkerModule\Action.cs" />
+    <Compile Include="Modules\WalkerModule\DefaultActions.cs" />
+    <Compile Include="Modules\WalkerModule\StatementType.cs" />
     <Compile Include="Modules\WalkerModule\Tracker.cs" />
     <Compile Include="Modules\WalkerModule\Walker.cs" />
+    <Compile Include="Modules\WalkerModule\WalkerLabel.cs" />
     <Compile Include="Modules\WalkerModule\WalkerStatement.cs" />
     <Compile Include="Modules\WalkerModule\Waypoint.cs" />
     <Compile Include="Simulators\KeyAddresses.cs" />
